cambios y algunas validaciones en las carreras
