# src/routes/advisoryRoutes.js
@@ -9,7 +9,8 @@ router.get("/:advisoryId", Auth, advisoryController.getAdvisoryById);
 router.put("/:advisoryId", Auth, advisoryController.updateAdvisory);
 router.delete("/:advisoryId", Auth, advisoryController.deleteAdvisory);
 
-
+// Obtener asesorías agendadas para un asesor
+router.get("/advisor/:advisorId", Auth, advisoryController.getAdvisoriesByAdvisor);
 // Rutas para reportes
 
 router.get("/report/last7days", Auth, advisoryController.getAdvisoryReportLast7Days);
