# src/routes/userRoutes.js
@@ -7,11 +7,11 @@ router.get("/", Auth, userController.getAllUsers);
 router.post("/recovery-password/:token", userController.recoveryPassword);
 router.post("/register", userController.register);
 router.post("/login", userController.login);
-//router.get("/mail",  userController.sendPruebas);
+
 router.post('/forgot-password', userController.forgotPassword);
 router.get("/:userId", Auth,userController.getUserById);
 router.post("/:userId", Auth, userController.updateUser);
-router.post("/:userId", Auth, userController.disableUser);
-router.post("/send-email", userController.sendWelcomeEmail);
+router.post("/enable/:userId", Auth, userController.disableUser);
+router.post("/send-email", Auth,userController.sendWelcomeEmail);
 
 module.exports = router;
